--- a/classifier_experiments/shadow_regions_experiment4.ipynb
+++ b/classifier_experiments/shadow_regions_experiment4.ipynb
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "595a9528",
+   "id": "a883a989",
    "metadata": {},
    "source": [
     "## Test Skeletonization"
@@ -660,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "074cfb96",
+   "id": "846c3fb3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -671,7 +671,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "f8b6fa56",
+   "id": "6ece20f5",
    "metadata": {},
    "outputs": [
     {
@@ -695,7 +695,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "47e02aa1",
+   "id": "909a1ffd",
    "metadata": {},
    "outputs": [
     {
@@ -716,7 +716,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "62b491ae",
+   "id": "83abf894",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -727,7 +727,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "712723bc",
+   "id": "1f2239c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -737,7 +737,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "0a36bdb5",
+   "id": "91b8eb3e",
    "metadata": {},
    "outputs": [
     {
@@ -768,12 +768,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 101,
    "id": "8ecfaabb",
    "metadata": {},
    "outputs": [],
    "source": [
     "img_thresh = np.array(Image.open(\"/users/riya/race/dataset/segmentations/7445.bmp\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "58d1f9d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(480, 640)"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "img_thresh.shape"
    ]
   },
   {
@@ -1033,7 +1054,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "f5b53355",
+   "id": "7c89f320",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1255,7 +1276,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69cbaeb9",
+   "id": "0ad98d47",
    "metadata": {},
    "source": [
     "## Skeletonization Function"
@@ -1264,7 +1285,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "bd249f8f",
+   "id": "3b2d163e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1282,7 +1303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04d363c8",
+   "id": "008e62e1",
    "metadata": {},
    "source": [
     "### Save Skeletonized Images"
@@ -1290,8 +1311,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
-   "id": "529816c7",
+   "execution_count": 105,
+   "id": "03d088d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1300,28 +1321,28 @@
     "        img_id = data['image_id'][i]\n",
     "            \n",
     "        img = np.array(Image.open(load_path + str(img_id) + '.bmp'))\n",
-    "        resized = cv2.resize(img, (256, 256))\n",
+    "        # resized = cv2.resize(img, (256, 256))\n",
     "            \n",
     "        # skeletonize image          \n",
-    "        skeletonized = lee_skeletonization(resized)\n",
-    "        skeletonized = Image.fromarray(skeletonized)\n",
+    "        # skeletonized = lee_skeletonization(resized)\n",
+    "        img = Image.fromarray(img)\n",
     "\n",
     "\n",
     "        # saving image\n",
-    "        skeletonized.save(save_path + 'skeletonized/' + str(img_id) + '.bmp')"
+    "        img.save(save_path + 'original/' + str(img_id) + '.bmp')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
-   "id": "acd32051",
+   "execution_count": 106,
+   "id": "ced8a0fb",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 4546/4546 [03:59<00:00, 19.00it/s]\n"
+      "100%|██████████| 4546/4546 [00:32<00:00, 140.83it/s]\n"
      ]
     }
    ],
@@ -1404,7 +1425,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "457b064a",
+   "id": "71ee8c63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1416,7 +1437,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "98d4a6bd",
+   "id": "884b6c3b",
    "metadata": {},
    "outputs": [
     {
@@ -1433,488 +1454,6 @@
    "source": [
     "img_test.shape"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e13dbada",
-   "metadata": {},
-   "source": [
-    "### Prepare For Classifier"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a98ad3fd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "caa8ff7a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c5a43cf8",
-   "metadata": {},
-   "source": [
-    "Just for bright center, let's make 2 dataframes, 1 per race. We'll start by predicting race of the original images, beginning with white. Then we'll predict race for each of the radiuses, make a dataframe (4 at this point). After, we will combine the 5 dataframes -- original and radius predictions -- into one dataframe, where we can then get 1/4 of the information we need. We will save this dataframe as a .csv in the prediction folder."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0bd427ce",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "og_white = combine_images(white_posterior, intensity_path, None, None)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2bbe42d3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "og_white.shape # nice shape ƪ(˘⌣˘)ʃ"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4dbf427e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bright_back_white0 = combine_images(white_posterior, bright_back_path, 'white', 0)\n",
-    "bright_back_white30 = combine_images(white_posterior, bright_back_path, 'white', 30)\n",
-    "bright_back_white60 = combine_images(white_posterior, bright_back_path, 'white', 60)\n",
-    "bright_back_white90 = combine_images(white_posterior, bright_back_path, 'white', 90)\n",
-    "bright_back_white120 = combine_images(white_posterior, bright_back_path, 'white', 120)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7fbd12af",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bright_back_white120 = combine_images(white_posterior, bright_back_path, 'white', 120)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0b4cd169",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bright_back_white0.shape, bright_back_white30.shape, bright_back_white60.shape, bright_back_white90.shape, bright_back_white120.shape"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0b65baa5",
-   "metadata": {},
-   "source": [
-    "### Run Through Classifier & Predictions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2693dfd5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bright_back_white_preds = pd.DataFrame(columns = ['id', 'original', '0', '30', '60', '90', '120'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f77cb23f",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "white_ids = pd.Series(white_posterior['image_id'])\n",
-    "bright_back_white_preds['id'] = white_ids"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "49b1b25a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bright_back_white_preds.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "23834c7f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def determine_preds(preds_df, images, colname):\n",
-    "\n",
-    "    num_images = images.shape[0]\n",
-    "    preds_arr = [0] * num_images\n",
-    "\n",
-    "    preds = segmentation_classifier(images)\n",
-    "    \n",
-    "    for i in tqdm(range(num_images)):\n",
-    "        preds_arr[i] = preds.numpy()[i, 1] # returning the white prediction for each image\n",
-    "    \n",
-    "    preds_df[colname] = preds_arr"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "19689825",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "determine_preds(bright_back_white_preds, og_white, 'original')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7ca5cab7",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "bright_back_white_preds.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f21c9b5c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(bright_back_white_preds)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8f3ccdde",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "determine_preds(bright_back_white_preds, bright_back_white0, '0')\n",
-    "determine_preds(bright_back_white_preds, bright_back_white30, '30')\n",
-    "determine_preds(bright_back_white_preds, bright_back_white60, '60')\n",
-    "determine_preds(bright_back_white_preds, bright_back_white90, '90')\n",
-    "determine_preds(bright_back_white_preds, bright_back_white120, '120')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "871470a4",
-   "metadata": {},
-   "source": [
-    "Very interesting!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8adc878a",
-   "metadata": {},
-   "source": [
-    "### Save Predictions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "03ec79c6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def save_df(df, path, name):    \n",
-    "    df.to_csv(path + str(name) + \".csv\") "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b6f0f83d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "preds_save_path = \"/users/riya/race/classifier_experiments/predictions/high_intensity_experiment3/\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9939b3b9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "cc6d8500",
-   "metadata": {},
-   "source": [
-    "## Analyze Predictions\n",
-    "\n",
-    "Loading from predictions folder."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a21b996c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bright_center_white_preds = pd.read_csv(preds_save_path + \"white_bright_center_preds.csv\", \n",
-    "                                        usecols = ['id', 'original', '0', '30', '60', '90', '120'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8d404bb6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bright_center_black_preds = pd.read_csv(preds_save_path + \"black_bright_center_preds.csv\", \n",
-    "                                        usecols = ['id', 'original', '0', '30', '60', '90', '120'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9c058695",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8d80441a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bright_back_white_preds = pd.read_csv(preds_save_path + \"white_bright_back_preds.csv\", \n",
-    "                                        usecols = ['id', 'original', '0', '30', '60', '90', '120'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5e6e7794",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bright_back_black_preds = pd.read_csv(preds_save_path + \"black_bright_back_preds.csv\", \n",
-    "                                        usecols = ['id', 'original', '0', '30', '60', '90', '120'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "093afcef",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def percent_predictions(preds_df, race):\n",
-    "    \n",
-    "    pred = ''\n",
-    "    \n",
-    "    if (race == 'black'):\n",
-    "        pred == 'white'\n",
-    "    elif (race == 'white'):\n",
-    "        pred == 'black'\n",
-    "    \n",
-    "    print('Percent of Images Incorrectly Predicted as ' + pred)\n",
-    "    \n",
-    "    def preds_print(colname):\n",
-    "        if (race == 'white'): # getting the percent predicted correctly as white\n",
-    "            predscol = preds_df[preds_df[colname] > 0.5]\n",
-    "        elif (race == 'black'): # getting the percent predicted correctly as black\n",
-    "            predscol = preds_df[preds_df[colname] < 0.5]\n",
-    "            \n",
-    "        right_percent = 100 * len(predscol)/len(preds_df) \n",
-    "        wrong_percent = 100 - right_percent\n",
-    "        print(str(colname) + ':' + str(wrong_percent))\\\n",
-    "    \n",
-    "    preds_print('original')\n",
-    "    preds_print('0')\n",
-    "    preds_print('30')\n",
-    "    preds_print('60')\n",
-    "    preds_print('90')\n",
-    "    preds_print('120')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "309e1dc6",
-   "metadata": {},
-   "source": [
-    "### Bright Back"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f9c08f74",
-   "metadata": {},
-   "source": [
-    "#### % white images classified as black"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4b9abf64",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "percent_predictions(bright_back_white_preds, 'white')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e5809efe",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bright_back_white_preds"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "610d7b79",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test = bright_back_white_preds[bright_back_white_preds['30'] > 0.5]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6012d1f9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4e912a8a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test > 0.5"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c7f06bff",
-   "metadata": {},
-   "source": [
-    "#### % black images classified as white"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "102ec061",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "percent_predictions(bright_back_black_preds, 'black')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b3df5db8",
-   "metadata": {},
-   "source": [
-    "### Bright Center"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "08be4ed0",
-   "metadata": {},
-   "source": [
-    "#### % white images classified as black"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9241c420",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bright_center_white_preds.loc[bright_center_white_preds['id'] == 9400]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "be8c5dfc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "percent_predictions(bright_center_white_preds, 'white')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3da66219",
-   "metadata": {},
-   "source": [
-    "#### % black images classified as white"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7198fc83",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "percent_predictions(bright_center_black_preds, 'black')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1bc6d051",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
