quick commit to say i should probably check my half skeleton code. and so far I have trained 63 models. Also do some organizing

--- a/classifier_experiments/train.ipynb
+++ b/classifier_experiments/train.ipynb
@@ -1961,17 +1961,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "275acf7b",
-   "metadata": {},
-   "source": [
-    "### Functions to be Lamda Applied"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "4a347a16",
+   "execution_count": null,
+   "id": "945b90a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2004,50 +1996,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "9cad54d2",
+   "cell_type": "markdown",
+   "id": "275acf7b",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def multiple_ring_mask(disk_center, num_rings, ring_radiuses,\n",
-    "                       image_size = (224, 224)):\n",
-    "    \n",
-    "    # ex. ring_radiuses: [[0, 15], [75, 90]]\n",
-    "    \n",
-    "    center_mask = np.full(image_size, 0, dtype=np.uint8) \n",
-    "\n",
-    "    for i in range(num_rings):\n",
-    "        ring_mask = np.full(image_size, 0, dtype=np.uint8)  \n",
-    "        # for each of the radiuses given dark around the outer circle\n",
-    "        cv2.circle(ring_mask, disk_center, ring_radiuses[i][1], (255, 255, 255), -1) \n",
-    "        cv2.circle(ring_mask, disk_center, ring_radiuses[i][0], (0,0, 0), -1) # the white for that region\n",
-    "    \n",
-    "        center_mask = center_mask + ring_mask \n",
-    "\n",
-    "    # idk why exactly this is needed...? \n",
-    "    # probably related to the fact that adding the original center_mask does NOT make sense, but appears to work\n",
-    "    center_mask = cv2.bitwise_not(center_mask) \n",
-    "    \n",
-    "    # back_mask = cv2.bitwise_not(center_mask)\n",
-    "    # return cv2.bitwise_or(img, img, mask=back_mask)\n",
-    "    \n",
-    "    return center_mask"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0b0a168b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# modified_img2 = cv2.bitwise_or(modified_img, modified_img, mask=center_mask)"
+    "### Functions to be DIRECTLY Lamda Applied"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f0bdf3e6",
+   "id": "212371a9",
    "metadata": {},
    "source": [
     "### Good code next steps: functionalize all of this code MORE!!"
@@ -2055,10 +2013,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "edbdd268",
+   "id": "1d912d8c",
    "metadata": {},
    "source": [
-    "#### Goal of Half-Skeletonize:\n",
+    "### Half-Skeletonize:\n",
     "\n",
     "Goal: trying to prove the theory that skeletonizing only the exterior regions will get a higher AUC, possibly by using thinner pixels in exterior regions and thicker pixels in interior regions"
    ]
@@ -2066,7 +2024,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "753e2b7b",
+   "id": "fb1084fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2119,9 +2077,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a8b4f8ca",
+   "metadata": {},
+   "source": [
+    "#### Half Skeletonize Test Code"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "01fc48ac",
+   "id": "040110ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2132,7 +2098,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "de812cd2",
+   "id": "fc927eb8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2142,7 +2108,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "a36e801e",
+   "id": "601dbc7e",
    "metadata": {},
    "outputs": [
     {
@@ -2173,12 +2139,54 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c9b28763",
+   "metadata": {},
+   "source": [
+    "### Shadow Rings"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f3f01e7",
+   "id": "31e16976",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def multiple_ring_mask(disk_center, num_rings, ring_radiuses,\n",
+    "                       image_size = (224, 224)):\n",
+    "    \n",
+    "    # ex. ring_radiuses: [[0, 15], [75, 90]]\n",
+    "    \n",
+    "    center_mask = np.full(image_size, 0, dtype=np.uint8) \n",
+    "\n",
+    "    for i in range(num_rings):\n",
+    "        ring_mask = np.full(image_size, 0, dtype=np.uint8)  \n",
+    "        # for each of the radiuses given dark around the outer circle\n",
+    "        cv2.circle(ring_mask, disk_center, ring_radiuses[i][1], (255, 255, 255), -1) \n",
+    "        cv2.circle(ring_mask, disk_center, ring_radiuses[i][0], (0,0, 0), -1) # the white for that region\n",
+    "    \n",
+    "        center_mask = center_mask + ring_mask \n",
+    "\n",
+    "    # idk why exactly this is needed...? \n",
+    "    # probably related to the fact that adding the original center_mask does NOT make sense, but appears to work\n",
+    "    center_mask = cv2.bitwise_not(center_mask) \n",
+    "    \n",
+    "    # back_mask = cv2.bitwise_not(center_mask)\n",
+    "    # return cv2.bitwise_or(img, img, mask=back_mask)\n",
+    "    \n",
+    "    return center_mask"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "182dd007",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# modified_img2 = cv2.bitwise_or(modified_img, modified_img, mask=center_mask)"
+   ]
   },
   {
    "cell_type": "code",
@@ -2261,7 +2269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a57226b0",
+   "id": "ee695f64",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2761,51 +2769,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "59d518ef",
+   "execution_count": null,
+   "id": "b37a5ee6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Thu Jun 23 20:57:10 2022       \r\n",
-      "+-----------------------------------------------------------------------------+\r\n",
-      "| NVIDIA-SMI 470.129.06   Driver Version: 470.129.06   CUDA Version: 11.4     |\r\n",
-      "|-------------------------------+----------------------+----------------------+\r\n",
-      "| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |\r\n",
-      "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\r\n",
-      "|                               |                      |               MIG M. |\r\n",
-      "|===============================+======================+======================|\r\n",
-      "|   0  Tesla K80           Off  | 00000000:06:00.0 Off |                    0 |\r\n",
-      "| N/A   57C    P0    60W / 149W |  10906MiB / 11441MiB |      0%      Default |\r\n",
-      "|                               |                      |                  N/A |\r\n",
-      "+-------------------------------+----------------------+----------------------+\r\n",
-      "|   1  Tesla K80           Off  | 00000000:07:00.0 Off |                    0 |\r\n",
-      "| N/A   40C    P0    74W / 149W |    140MiB / 11441MiB |      0%      Default |\r\n",
-      "|                               |                      |                  N/A |\r\n",
-      "+-------------------------------+----------------------+----------------------+\r\n",
-      "|   2  Tesla K80           Off  | 00000000:85:00.0 Off |                    0 |\r\n",
-      "| N/A   90C    P0   128W / 149W |   2700MiB / 11441MiB |    100%      Default |\r\n",
-      "|                               |                      |                  N/A |\r\n",
-      "+-------------------------------+----------------------+----------------------+\r\n",
-      "|   3  Tesla K80           Off  | 00000000:86:00.0 Off |                    0 |\r\n",
-      "| N/A   45C    P0    74W / 149W |   6932MiB / 11441MiB |      0%      Default |\r\n",
-      "|                               |                      |                  N/A |\r\n",
-      "+-------------------------------+----------------------+----------------------+\r\n",
-      "                                                                               \r\n",
-      "+-----------------------------------------------------------------------------+\r\n",
-      "| Processes:                                                                  |\r\n",
-      "|  GPU   GI   CI        PID   Type   Process name                  GPU Memory |\r\n",
-      "|        ID   ID                                                   Usage      |\r\n",
-      "|=============================================================================|\r\n",
-      "+-----------------------------------------------------------------------------+\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "!nvidia-smi"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
