training 10 more models

--- a/classifier_experiments/train.ipynb
+++ b/classifier_experiments/train.ipynb
@@ -1632,7 +1632,7 @@
    "id": "e04430e9",
    "metadata": {},
    "source": [
-    "## Prepare Dataset"
+    "# Prepare Dataset"
    ]
   },
   {
@@ -1640,7 +1640,7 @@
    "id": "721b2cce",
    "metadata": {},
    "source": [
-    "### Prepare Optic Disk Dataset"
+    "## Prepare Optic Disk Dataset"
    ]
   },
   {
@@ -1682,7 +1682,7 @@
    "id": "7270716f",
    "metadata": {},
    "source": [
-    "### Prepare Race Dataset\n",
+    "## Prepare Race Dataset\n",
     "\n",
     "We'll try a 70/10/20 split (train/val/test). We don't have access to info outside of black/white and posterior, so we'll just do a simple split."
    ]
@@ -1814,7 +1814,7 @@
    "id": "22853a22",
    "metadata": {},
    "source": [
-    "### Model Definitions"
+    "# Model Definitions"
    ]
   },
   {
@@ -1851,7 +1851,7 @@
    "id": "cb6e1c42",
    "metadata": {},
    "source": [
-    "## Preprocessing"
+    "# Preprocessing"
    ]
   },
   {
@@ -1896,7 +1896,7 @@
    "id": "4bf3d155",
    "metadata": {},
    "source": [
-    "### General Functions"
+    "## General Functions"
    ]
   },
   {
@@ -1963,7 +1963,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9aa87ca0",
+   "id": "d30c2e79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2000,12 +2000,12 @@
    "id": "275acf7b",
    "metadata": {},
    "source": [
-    "### Functions to be DIRECTLY Lamda Applied"
+    "## Functions to be DIRECTLY Lamda Applied"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "fa7d793a",
+   "id": "e69515f1",
    "metadata": {},
    "source": [
     "### Good code next steps: functionalize all of this code MORE!!"
@@ -2013,7 +2013,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "943601e7",
+   "id": "37123f2b",
    "metadata": {},
    "source": [
     "### Half-Skeletonize:\n",
@@ -2024,7 +2024,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "55376e5f",
+   "id": "a01423b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2078,7 +2078,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d997be9",
+   "id": "73caa611",
    "metadata": {},
    "source": [
     "#### Half Skeletonize Test Code"
@@ -2086,8 +2086,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "586209d5",
+   "execution_count": 44,
+   "id": "6275cb73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2097,27 +2097,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "f8517bd8",
+   "execution_count": 51,
+   "id": "2085dae5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "return_img = half_skeletonize(test_channels, (58, 129), (0, 60), 'skeleton_background')"
+    "return_img = half_skeletonize(test_channels, (58, 129), [0, 60], 'skeleton_background')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "a4b3b1ef",
+   "execution_count": 52,
+   "id": "476296c7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f2ed8b8bd68>"
+       "<matplotlib.image.AxesImage at 0x7f2ed89c8cf8>"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2140,7 +2140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ad5fa2a",
+   "id": "45250d9f",
    "metadata": {},
    "source": [
     "### Shadow Rings"
@@ -2149,7 +2149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c6c9535",
+   "id": "dccb0cef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2181,7 +2181,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ef7bd77",
+   "id": "7e696f8f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2269,7 +2269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96055c5e",
+   "id": "e2466153",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2279,7 +2279,7 @@
    "id": "8b1b122d",
    "metadata": {},
    "source": [
-    "#### Shadow Center & Optic Disk Manual"
+    "### Shadow Center & Optic Disk Manual Test"
    ]
   },
   {
@@ -2392,6 +2392,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "658ba5a4",
+   "metadata": {},
+   "source": [
+    "### Old Train Functions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "d53d1aab",
@@ -2428,27 +2436,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3f37aa55",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "05f7ff70",
-   "metadata": {},
-   "source": [
-    "#### Lambda Transforms Style :D"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "e2419fde",
    "metadata": {},
    "source": [
-    "### Train Code"
+    "# Train Code"
    ]
   },
   {
@@ -2756,13 +2748,78 @@
     "    train(data_dir, [0, 30], 'skeleton_center', '#7(half_skeletonize)')\n",
     "    \n",
     "    train(data_dir, [0, 15], 'skeleton_background', '#7(half_skeletonize)')\n",
-    "    train(data_dir, [0, 15], 'skeleton_center', '#7(half_skeletonize)')"
+    "    train(data_dir, [0, 15], 'skeleton_center', '#7(half_skeletonize)')\n",
+    "    \n",
+    "        # ------------------ experiment 7 part 2\n",
+    "    \n",
+    "    train(data_dir, [0, 45], 'skeleton_background', '#7(half_skeletonize)')\n",
+    "    train(data_dir, [0, 45], 'skeleton_center', '#7(half_skeletonize)')\n",
+    "    \n",
+    "    train(data_dir, [0, 75], 'skeleton_background', '#7(half_skeletonize)')\n",
+    "    train(data_dir, [0, 75], 'skeleton_center', '#7(half_skeletonize)')\n",
+    "    \n",
+    "    train(data_dir, [0, 90], 'skeleton_background', '#7(half_skeletonize)')\n",
+    "    train(data_dir, [0, 90], 'skeleton_center', '#7(half_skeletonize)')\n",
+    "    \n",
+    "    train(data_dir, [0, 105], 'skeleton_background', '#7(half_skeletonize)')\n",
+    "    train(data_dir, [0, 105], 'skeleton_center', '#7(half_skeletonize)')\n",
+    "    \n",
+    "    train(data_dir, [0, 120], 'skeleton_background', '#7(half_skeletonize)')\n",
+    "    train(data_dir, [0, 120], 'skeleton_center', '#7(half_skeletonize)')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "ea44c23d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Thu Jun 23 21:12:18 2022       \r\n",
+      "+-----------------------------------------------------------------------------+\r\n",
+      "| NVIDIA-SMI 470.129.06   Driver Version: 470.129.06   CUDA Version: 11.4     |\r\n",
+      "|-------------------------------+----------------------+----------------------+\r\n",
+      "| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |\r\n",
+      "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\r\n",
+      "|                               |                      |               MIG M. |\r\n",
+      "|===============================+======================+======================|\r\n",
+      "|   0  Tesla K80           Off  | 00000000:06:00.0 Off |                    0 |\r\n",
+      "| N/A   74C    P0    64W / 149W |  10906MiB / 11441MiB |      0%      Default |\r\n",
+      "|                               |                      |                  N/A |\r\n",
+      "+-------------------------------+----------------------+----------------------+\r\n",
+      "|   1  Tesla K80           Off  | 00000000:07:00.0 Off |                    0 |\r\n",
+      "| N/A   63C    P0   147W / 149W |   2716MiB / 11441MiB |     97%      Default |\r\n",
+      "|                               |                      |                  N/A |\r\n",
+      "+-------------------------------+----------------------+----------------------+\r\n",
+      "|   2  Tesla K80           Off  | 00000000:85:00.0 Off |                    0 |\r\n",
+      "| N/A   90C    P0   132W / 149W |   2700MiB / 11441MiB |    100%      Default |\r\n",
+      "|                               |                      |                  N/A |\r\n",
+      "+-------------------------------+----------------------+----------------------+\r\n",
+      "|   3  Tesla K80           Off  | 00000000:86:00.0 Off |                    0 |\r\n",
+      "| N/A   45C    P0    73W / 149W |   6932MiB / 11441MiB |      0%      Default |\r\n",
+      "|                               |                      |                  N/A |\r\n",
+      "+-------------------------------+----------------------+----------------------+\r\n",
+      "                                                                               \r\n",
+      "+-----------------------------------------------------------------------------+\r\n",
+      "| Processes:                                                                  |\r\n",
+      "|  GPU   GI   CI        PID   Type   Process name                  GPU Memory |\r\n",
+      "|        ID   ID                                                   Usage      |\r\n",
+      "|=============================================================================|\r\n",
+      "+-----------------------------------------------------------------------------+\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!nvidia-smi"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b709d51f",
+   "id": "c94abfac",
    "metadata": {},
    "outputs": [],
    "source": []
